Update help text for renaming an aspect

--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -402,7 +402,7 @@ en:
       close_account_q: "How do I delete my seed (account)?"
       close_account_a: "Go to the bottom of your settings page and click the “Close account” button."
       data_visible_to_podmin_q: "How much of my information can my pod administrator see?"
-      data_visible_to_podmin_a: "Communication *between* pods is always encrypted (using SSL and diaspora*’s own transport encryption), but the storage of data on pods is not encrypted. If they wanted to, the database administrator for your pod (usually the person running the pod) could access all your profile data and everything that you post (as is the case for most websites that store user data). Running your own pod provides more privacy since you then control access to the database."
+      data_visible_to_podmin_a: "Communication between pods is always encrypted (using SSL and diaspora*’s own transport encryption), but the storage of data on pods is not encrypted. If they wanted to, the database administrator for your pod (usually the person running the pod) could access all your profile data and everything that you post (as is the case for most websites that store user data). Running your own pod provides more privacy since you then control access to the database."
       data_other_podmins_q: "Can the administrators of other pods see my information?"
       data_other_podmins_a: "Once you are sharing with someone on another pod, any posts you share with them and a copy of your profile data are stored (cached) on their pod, and are accessible to that pod’s database administrator. When you delete a post or profile data it is deleted from your pod and any other pods where it had previously been stored."
     aspects:
@@ -415,18 +415,18 @@ en:
       restrict_posts_i_see_a: "Yes. Click on “My aspects” in the side-bar and then click individual aspects in the list to select or deselect them. Only the posts by people in the selected aspects will appear in your stream."
       contacts_know_aspect_q: "Do my contacts know which aspects I have put them in?"
       contacts_know_aspect_a: "No. They cannot see the name of the aspect under any circumstances."
-      contacts_visible_q: "What does \"make contacts in this aspect visible to each other\" mean?"
+      contacts_visible_q: "What does “make contacts in this aspect visible to each other” mean?"
       contacts_visible_a: "If you check this option then contacts from that aspect will be able to see who else is in it, on your profile page under your picture. It’s best to select this option only if the contacts in that aspect all know each other. They still won’t be able to see what the aspect is called."
       remove_notification_q: "If I remove someone from an aspect, or all of my aspects, are they notified of this?"
       remove_notification_a: "No."
       rename_aspect_q: "Can I rename an aspect?"
-      rename_aspect_a: "Yes. In your list of aspects on the left side of the main page, point your mouse at the aspect you want to rename. Click the little “Edit” pencil that appears to the right. Click “Rename” in the box that appears."
+      rename_aspect_a: "Yes. In your list of aspects on the left side of the main page, point your mouse at the aspect you want to rename. Click the little “Edit” pencil that appears to the right. You will be taken to the page for this aspect. Click the edit pencil next to the aspect name at the top of this page, the change the name and press “Update”."
       change_aspect_of_post_q: "Once I have posted something, can I change the aspect(s) that can see it?"
       change_aspect_of_post_a: "No, but you can always make a new post with the same content and post it to a different aspect."
       post_multiple_aspects_q: "Can I post content to multiple aspects at once?"
       post_multiple_aspects_a: "Yes. When you are making a post, use the aspect selector button to select or deselect aspects. Your post will be visible to all the aspects you select. You could also select the aspects you want to post to in the side-bar. When you post, the aspect(s) that you have selected in the list on the left will automatically be selected in the aspect selector when you start to make a new post."
       person_multiple_aspects_q: "Can I add a person to multiple aspects?"
-      person_multiple_aspects_a: "Yes. Go to your contacts page and click on “My contacts”. For each contact you can use the menu on the right to add them to (or remove them from) as many aspects as you want. Or you can add them to a new aspect (or remove them from an aspect) by clicking the aspect selector button on their profile page. Or you can even just move the pointer over their name where you see it in the stream, and a “hover-card” will appear. You can change the aspects they are in right there."
+      person_multiple_aspects_a: "Yes. Go to your contacts page and click on “My contacts”. For each contact you can use the menu on the right to add them to (or remove them from) as many aspects as you want. Or you can add them to a new aspect (or remove them from an aspect) by clicking the aspect selector button on their profile page. Or you can even just move the pointer over their name where you see it in the stream, and a “hovercard” will appear. You can change the aspects they are in right there."
       delete_aspect_q: "How do I delete an aspect?"
       delete_aspect_a: "In your list of aspects on the left side of the main page, point your mouse at the aspect you want to delete. Click the little “Edit” pencil that appears on the right. Click the “Delete this aspect” button in the box that appears."
     chat:
@@ -436,18 +436,18 @@ en:
       add_contact_roster_a: "First, you need to enable chat for one of the aspects that person is in. To do so, go to the %{contacts_page}, select the aspect you want and click on the chat icon to enable chat for the aspect. %{toggle_privilege} You could, if you prefer, create a special aspect called 'Chat' and add the people you want to chat with to that aspect. Once you've done this, open the chat interface and select the person you want to chat with."
     mentions:
       title: "Mentions"
-      what_is_a_mention_q: "What is a \"mention\"?"
+      what_is_a_mention_q: "What is a “mention”?"
       what_is_a_mention_a: "A mention is a link to a person’s profile page that appears in a post. When someone is mentioned they receive a notification that calls their attention to the post."
       how_to_mention_q: "How do I mention someone when making a post?"
-      how_to_mention_a: "Type the \"@\" sign and start typing their name. A drop down menu should appear to let you select them more easily. Note that it is only possible to mention people you have added to an aspect."
+      how_to_mention_a: "Type the “@“ sign and start typing their name. A drop down menu should appear to let you select them more easily. Note that it is only possible to mention people you have added to an aspect."
       mention_in_comment_q: "Can I mention someone in a comment?"
       mention_in_comment_a: "No, not currently."
       see_mentions_q: "Is there a way to see the posts in which I have been mentioned?"
-      see_mentions_a: "Yes, click \"Mentions\" in the left hand column on your home page."
+      see_mentions_a: "Yes, click “Mentions“ in the left hand column on your home page."
     pods:
       title: "Pods"
       what_is_a_pod_q: "What is a pod?"
-      what_is_a_pod_a: "A pod is a server running the diaspora* software and connected to the diaspora* network. \"Pod\" is a metaphor referring to pods on plants which contain seeds, in the way that a server contains a number of user accounts. There are many different pods. You can add friends from other pods and communicate with them. (You can think of a diaspora* pod as similar to an email provider: there are public pods, private pods, and with some effort you can even run your own)."
+      what_is_a_pod_a: "A pod is a server running the diaspora* software and connected to the diaspora* network. “Pod“ is a metaphor referring to pods on plants which contain seeds, in the way that a server contains a number of user accounts. There are many different pods. You can add friends from other pods and communicate with them. (You can think of a diaspora* pod as similar to an email provider: there are public pods, private pods, and with some effort you can even run your own)."
       find_people_q: "I just joined a pod, how can I find people to share with?"
       find_people_a: "Invite your friends using the email link in the side-bar. Follow #tags to discover others who share your interests, and add those who post things that interest you to an aspect. Shout out that you’re #newhere in a public post."
       use_search_box_q: "How do I use the search box to find particular individuals?"
@@ -528,16 +528,16 @@ en:
       title: "Sharing"
       add_to_aspect_q: "What happens when I add someone to one of my aspects? Or when someone adds me to one of their aspects?"
       add_to_aspect_a1: "Let’s say that Amy adds Ben to an aspect, but Ben has not (yet) added Amy to an aspect:"
-      add_to_aspect_li1: "Ben will receive a notification that Amy has \"started sharing\" with Ben."
+      add_to_aspect_li1: "Ben will receive a notification that Amy has “started sharing“ with Ben."
       add_to_aspect_li2: "Amy will start to see Ben’s public posts in her stream."
       add_to_aspect_li3: "Amy will not see any of Ben’s private posts."
       add_to_aspect_li4: "Ben will not see Amy’s public or private posts in his stream."
       add_to_aspect_li5: "But if Ben goes to Amy’s profile page, then he will see Amy’s private posts that she makes to her aspect that has him in it (as well as her public posts which anyone can see there)."
       add_to_aspect_li6: "Ben will be able to see Amy’s private profile (bio, location, gender, birthday)."
-      add_to_aspect_li7: "Amy will appear under \"Only sharing with me\" on Ben’s contacts page."
+      add_to_aspect_li7: "Amy will appear under “Only sharing with me“ on Ben’s contacts page."
       add_to_aspect_a2: "This is known as asymmetrical sharing. If and when Ben also adds Amy to an aspect then it would become mutual sharing, with both Amy’s and Ben’s public posts and relevant private posts appearing in each other’s streams, etc. "
-      only_sharing_q: "Who are the people listed in \"Only sharing with me\" on my contacts page?"
-      only_sharing_a: "These are people that have added you to one of their aspects, but who are not (yet) in any of your aspects. In other words, they are sharing with you, but you are not sharing with them (asymmetrical sharing). If you add them to an aspect, they will then appear under that aspect and not under \"only sharing with you\". See above."
+      only_sharing_q: "Who are the people listed in “Only sharing with me“ on my contacts page?"
+      only_sharing_a: "These are people that have added you to one of their aspects, but who are not (yet) in any of your aspects. In other words, they are sharing with you, but you are not sharing with them (asymmetrical sharing). If you add them to an aspect, they will then appear under that aspect and not under “only sharing with you“. See above."
       list_not_sharing_q: "Is there a list of people whom I have added to one of my aspects, but who have not added me to one of theirs?"
       list_not_sharing_a: "No, but you can see whether or not someone is sharing with you by visiting their profile page. If they are, the bar under their profile picture will be green; if not, it’ll be grey. You should get a notification each time someone starts sharing with you."
       see_old_posts_q: "When I add someone to an aspect, can they see older posts that I have already posted to that aspect?"
@@ -548,8 +548,8 @@ en:
       what_are_tags_for_a: "Tags are a way to categorize a post, usually by topic. Searching for a tag shows all posts with that tag that you can see (both public and private posts). This lets people who are interested in a given topic find public posts about it."
       tags_in_comments_q: "Can I put tags in comments or just in posts?"
       tags_in_comments_a: "A tag added to a comment will still appear as a link to that tag’s page, but it will not make that post (or comment) appear on that tag page. This only works for tags in posts."
-      followed_tags_q: "What are \"#Followed Tags\" and how do I follow a tag?"
-      followed_tags_a: "After searching for a tag you can click the button at the top of the tag’s page to \"follow\" that tag. It will then appear in your list of followed tags on the left. Clicking one of your followed tags takes you to that tag’s page so you can see recent posts containing that tag. Click on #Followed Tags to see a stream of posts that include one of any of your followed tags. "
+      followed_tags_q: "What are “#Followed Tags“ and how do I follow a tag?"
+      followed_tags_a: "After searching for a tag you can click the button at the top of the tag’s page to “follow“ that tag. It will then appear in your list of followed tags on the left. Clicking one of your followed tags takes you to that tag’s page so you can see recent posts containing that tag. Click on #Followed Tags to see a stream of posts that include one of any of your followed tags. "
       people_tag_page_q: "Who are the people listed on the left-hand side of a tag page?"
       people_tag_page_a: "They are people who have listed that tag to describe themselves in their public profile."
       filter_tags_q: "How can I filter/exclude some tags from my stream?"
